--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
 
     <string name="pl.agh.edu.mobilecodereviewer.title">MobileCodeReviewer</string>
     <string name="pl.agh.edu.mobilecodereviewer.settings">Settings</string>
-
     <string name="pl.agh.edu.mobilecodereviewer.ChangesExplorer.title">Changes explorer</string>
+    <string name="pl.agh.edu.mobilecodereviewer.ChangeDetails.title">ChangeDetails</string>
+    <string name="pl.agh.edu.mobilecodereviewer.ModifiedFiles.title">ChangeDetails</string>
+    <string name="pl.agh.edu.mobilecodereviewer.ChangeDetails.tabs.modifiedFiles.id">ModifiedFiles</string>
+    <string name="pl.agh.edu.mobilecodereviewer.ChangeDetails.tabs.modifiedFiles.label">ModifiedFiles</string>
 
 </resources>
