--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <!--ChangeDetails end-->
 
     <string name="pl.agh.edu.mobilecodereviewer.SourceExplorer.title">Source Explorer</string>
+    <string name="pl.agh.edu.mobilecodereviewer.SourceExplorer.comment.placeholder">Type your comment...</string>
+
 
     <!--ChangesExplorer start-->
     <string name="pl.agh.edu.mobilecodereviewer.ChangesExplorer.title">Changes explorer</string>
