Issue #39: bugfix for wrong change details for selected change Issue #20: change number in change details
fix of deleted lines display in modified files tab
setting adding comment and adding review dialogs as cancellable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="pl.agh.edu.mobilecodereviewer.ChangeDetails.menu.addReview.message">Review message</string>
 
     <!--ChangeInfoTab start-->
+    <string name="pl.agh.edu.mobilecodereviewer.ChangeInfoTab.number">Number</string>
     <string name="pl.agh.edu.mobilecodereviewer.ChangeInfoTab.changeId">Change ID</string>
     <string name="pl.agh.edu.mobilecodereviewer.ChangeInfoTab.owner">Owner</string>
     <string name="pl.agh.edu.mobilecodereviewer.ChangeInfoTab.project">Project</string>
