Issue #43: Inserting comments by predefined comments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,5 +120,6 @@
     <string name="pl.agh.edu.mobilecodereviewer.SourceExplorer.toggleLineNumberVisiblity">Toggle line numbers visibility</string>
     <!--SourceExplorer end-->
 
+    <string name="lorem_ipsum">Witam cie tutaj</string>
 
 </resources>
